test/grammar/datatype/str_interpolation/var_not_define_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:2:8
  |
2 | b = "${c + 1}"
  |        ^ name 'c' is not defined
  |